Add tests for ArrayUtils.combine()